# mandelbrot-comparison

./: build.nu  readme.md  utils.nu
mandelbrot_py/: .gitignore  pyproject.toml
mandelbrot_py/mandelbrot_py/: __init__.py  count2color.py  mandelbrot_counter.py
mandelbrot_py/scripts/: mandelbrot_full_jit.py  mandelbrot_jit.py  mandelbrot_pure.py
mandelbrot_py/tests/: test_mandelbrot_py.py
mandelbrot_rs/: Cargo.toml
mandelbrot_rs/src/: count2color.rs  lib.rs  mandelbrot_counter.rs
